videos on doing

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
             </intent-filter>
         </activity>
         <activity android:name="com.yuvi.mantraui.news.NewsActivity"/>
+        <activity android:name="com.yuvi.mantraui.video.VideoListActivity"/>
+        <activity android:name="com.yuvi.mantraui.video.PlayerActivity"/>
     </application>
 
 </manifest>
