--- a/mantraui/build.gradle
+++ b/mantraui/build.gradle
@@ -25,8 +25,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
@@ -35,4 +34,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:26.1.0'
     compile 'com.android.support:cardview-v7:26.1.0'
     compile 'com.mantraideas.simplehttp:simplehttp:2.0.2'
+    implementation files('libs/YouTubeAndroidPlayerApi.jar')
 }
