--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <permission android:name="android.permission.MEDIA_CONTENT_CONTROL" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
         android:allowBackup="true"
@@ -23,6 +25,8 @@
         <activity android:name="com.yuvi.mantraui.video.VideoListActivity"/>
         <activity android:name="com.yuvi.mantraui.video.PlayerActivity"/>
         <activity android:name="com.yuvi.mantraui.gallery.GalleryActivity"/>
+        <activity android:name="com.yuvi.mantraui.audio.AudioActivity"/>
+        <service android:name="com.yuvi.mantraui.audio.MediaPlayerService" />
     </application>
 
 </manifest>
