--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.yuvi.mantraui.news.NewsActivity"/>
+        <activity android:name="com.yuvi.mantraui.news.NewsActivity">
+
+        </activity>
         <activity android:name="com.yuvi.mantraui.video.VideoListActivity"/>
         <activity android:name="com.yuvi.mantraui.video.PlayerActivity"/>
         <activity android:name="com.yuvi.mantraui.gallery.GalleryActivity"/>
