--- a/mantraui/build.gradle
+++ b/mantraui/build.gradle
@@ -36,5 +36,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:26.1.0'
     compile 'com.android.support:cardview-v7:26.1.0'
     compile 'com.mantraideas.simplehttp:simplehttp:2.0.2'
+    compile 'com.google.android.gms:play-services-ads:11.8.0'
     implementation files('libs/YouTubeAndroidPlayerApi.jar')
 }
